<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/collage_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220mdp"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_3mdp"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/_3mdp"
            android:fontFamily="@string/regular"
            android:text="@string/about_collage"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="Green Enviroment" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_3mdp"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/_3mdp"
            android:fontFamily="@string/bold"
            android:text="Branches"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250mdp"
            android:layout_marginTop="@dimen/text_margin"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>