<?xml version="1.0" encoding="utf-8" ?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_4mdp"
    android:layout_marginTop="@dimen/_6mdp"
    android:layout_marginEnd="@dimen/_4mdp"
    android:padding="@dimen/_2mdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/teacher_bg"
        android:padding="@dimen/_6mdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/authorProfile"
            android:layout_width="@dimen/_50mdp"
            android:layout_height="@dimen/_50mdp"
            android:layout_marginStart="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_5mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            android:src="@drawable/launcher_icon"
            app:civ_border_color="@color/purple_200"
            app:civ_border_width="@dimen/_1mdp"
            app:layout_constraintBottom_toTopOf="@id/view"
            app:layout_constraintEnd_toStartOf="@id/date_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            android:drawablePadding="@dimen/_5mdp"
            android:fontFamily="@string/bold"
            android:text="Collage App Admin"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/authorProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/regular"
            android:text="Date:"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size01"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintEnd_toStartOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/authorName"
            app:layout_constraintTop_toBottomOf="@id/authorName" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="@dimen/_6mdp"
            android:fontFamily="@string/regular"
            android:text="14/12/2004"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size01"
            app:layout_constraintBottom_toBottomOf="@id/date_txt"
            app:layout_constraintEnd_toStartOf="@id/time_txt"
            app:layout_constraintStart_toEndOf="@id/date_txt"
            app:layout_constraintTop_toBottomOf="@id/authorName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/time_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6mdp"
            android:fontFamily="@string/regular"
            android:text="Time:"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size01"
            app:layout_constraintBottom_toBottomOf="@id/time"
            app:layout_constraintEnd_toStartOf="@id/time"
            app:layout_constraintStart_toEndOf="@id/date"
            app:layout_constraintTop_toBottomOf="@id/authorName" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@string/regular"
            android:text="1:35 PM"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size01"
            app:layout_constraintBottom_toBottomOf="@id/time_txt"
            app:layout_constraintEnd_toEndOf="@id/authorName"
            app:layout_constraintStart_toEndOf="@id/time_txt"
            app:layout_constraintTop_toBottomOf="@id/authorName" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1mdp"
            android:layout_marginTop="@dimen/_6mdp"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/author_post_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorProfile" />

        <TextView
            android:id="@+id/author_post_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4mdp"
            android:layout_marginTop="@dimen/_6mdp"
            android:layout_marginEnd="@dimen/_4mdp"
            android:fontFamily="@string/medium"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@id/author_post_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <ImageView
            android:id="@+id/author_post_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_4mdp"
            android:layout_marginTop="@dimen/_6mdp"
            android:layout_marginEnd="@dimen/_4mdp"
            android:layout_marginBottom="@dimen/_6mdp"
            android:contentDescription="The Image is subject to copyright."
            android:scaleType="fitXY"
            android:src="@drawable/launcher_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author_post_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>