<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200mdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_30mdp"
                android:fontFamily="@string/bold"
                android:text="The Nehru Collage Tale"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_3mdp"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/_3mdp"
                android:fontFamily="@string/regular"
                android:text="@string/about_collage"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30mdp"
                android:background="@color/textColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_30mdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/text_margin"
                        android:fontFamily="@string/bold"
                        android:text="Departments"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/title_size" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16mdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/textOpposite"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/_8mdp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/_3mdp"
                                android:fontFamily="@string/medium"
                                android:text="Computer Science"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1mdp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/_8mdp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/_3mdp"
                                android:fontFamily="@string/medium"
                                android:text="Mathematics"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1mdp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/_8mdp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/_3mdp"
                                android:fontFamily="@string/medium"
                                android:text="Physics"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1mdp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/_8mdp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/_3mdp"
                                android:fontFamily="@string/medium"
                                android:text="Chemistry"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1mdp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/_8mdp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/_3mdp"
                                android:fontFamily="@string/medium"
                                android:text="Biology"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1mdp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/_8mdp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/_3mdp"
                                android:fontFamily="@string/medium"
                                android:text="Foundation"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1mdp"
                                android:background="@color/grey"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_30mdp"
                    android:fontFamily="@string/bold"
                    android:text="Contact Details"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_3mdp"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/_3mdp"
                    android:fontFamily="@string/regular"
                    android:text="@string/address"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/map_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_30mdp"
                    android:fontFamily="@string/bold"
                    android:text="Find Us On Google Maps"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/title_size" />

                <ImageButton
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_230mdp"
                    android:src="@drawable/map"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>